[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/logo2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/logo1.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Krub-ExtraLight.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/menu_button0.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/menu_button1.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/menu_button2.png" type="Texture" id=7]
[ext_resource path="res://scenes/cat1_idle.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/slice of heaven.ogg" type="AudioStream" id=9]
[ext_resource path="res://scenes/game.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 4 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="delay_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="white" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="main_menu" type="Control" parent="."]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 59.0
__meta__ = {
"_edit_group_": true
}

[node name="logo" type="Sprite" parent="main_menu"]
editor/display_folded = true
position = Vector2( 641.969, 190.401 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_menu/logo"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )

[node name="buttons" type="Control" parent="main_menu"]
margin_left = 504.871
margin_top = 319.987
margin_right = 782.871
margin_bottom = 536.987

[node name="start" type="Button" parent="main_menu/buttons"]
editor/display_folded = true
margin_left = 12.0
margin_top = 11.0
margin_right = 262.0
margin_bottom = 69.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="main_menu/buttons/start"]
position = Vector2( -8.38, -4.88837 )
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="main_menu/buttons/start"]
margin_right = 251.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "start"
align = 1
valign = 1

[node name="credits" type="Button" parent="main_menu/buttons"]
editor/display_folded = true
margin_left = 12.0
margin_top = 82.0002
margin_right = 262.0
margin_bottom = 140.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="main_menu/buttons/credits"]
position = Vector2( -8.38, -4.88837 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="main_menu/buttons/credits"]
margin_right = 251.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "credits"
align = 1
valign = 1

[node name="exit" type="Button" parent="main_menu/buttons"]
editor/display_folded = true
margin_left = 14.0
margin_top = 152.0
margin_right = 264.0
margin_bottom = 210.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="main_menu/buttons/exit"]
position = Vector2( -8.38, -4.88837 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="main_menu/buttons/exit"]
margin_right = 251.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "exit"
align = 1
valign = 1

[node name="cat1_idle" parent="main_menu" instance=ExtResource( 8 )]
margin_left = 883.779
margin_top = 298.295
margin_right = 1023.78
margin_bottom = 432.295
mouse_filter = 2

[node name="audio" type="AudioStreamPlayer" parent="main_menu"]
stream = ExtResource( 9 )
volume_db = -3.0
autoplay = true

[node name="credits" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 1280.0
margin_bottom = 720.0

[node name="us!" type="Control" parent="credits"]
margin_left = 633.131
margin_top = 203.056
margin_right = 1020.13
margin_bottom = 554.056
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="credits/us!"]
margin_left = -540.0
margin_right = -40.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "purrgatory was made by:

with help from:"
align = 2
autowrap = true

[node name="Label3" type="Label" parent="credits/us!"]
margin_right = 500.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "darvin heo (nivrad00)

brandon warren (wizardoffail)
chronodave
diego ahumada (zardoru)
pjmc
scott topping (scott1235)
zach stevens (q3104558)"
autowrap = true

[node name="fine text" type="Label" parent="credits"]
margin_left = 22.6564
margin_top = 645.445
margin_right = 1236.66
margin_bottom = 957.445
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\"Krub\" font is copywrite 2018 The Krub Project Authors (https://github.com/cadsondemak/Krub)
Bell sound by Daphne_in_Wonderland on freesound.org (https://freesound.org/people/Daphne_in_Wonderland/sounds/127149/)"
autowrap = true

[node name="back" type="Button" parent="credits"]
margin_left = 515.0
margin_top = 28.701
margin_right = 765.0
margin_bottom = 86.701
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="credits/back"]
position = Vector2( -8.38, -4.88837 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="credits/back"]
margin_right = 251.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "back"
align = 1
valign = 1

[node name="game" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="main_menu/buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main_menu/buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="main_menu/buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="credits/back" to="." method="_on_back_pressed"]
